ui fixe and adding zod for validation and types

--- a/css-tools/src/app/globals.css
+++ b/css-tools/src/app/globals.css
@@ -48,6 +48,8 @@
     background: var(--sb-thumb-color);
     border-radius: var(--sb-track-thumb);
 }
+/* .scroll-bar::-webkit-scrollbar-thumb:hover {
+} */
 
 @supports not selector(::-webkit-scrollbar) {
     .scroll-bar {
