--- a/css-tools/src/components/scrollbar/scrollbar.css
+++ b/css-tools/src/components/scrollbar/scrollbar.css
@@ -3,6 +3,9 @@
 @supports (scrollbar-width: auto) {
     .scroll-bar {
         scrollbar-width: var(--sb-width-type);
+/* //TO DO
+        scrollbar-color: hsl(var(--sb-thumb-color)) hsl(var(--sb-track-color)); 
+*/
     }
 }
 
